Switch to modularized action configuration